# cosmos-cookbook

./: .gitignore
docs/: SUMMARY.md  cosmos_models_overview.md
projects/cosmos_physics_benchmark/: README.md  pyproject.toml
projects/cosmos_physics_benchmark/notebooks/: 01_free_fall.ipynb
projects/cosmos_physics_benchmark/scripts/: analyze_results.py  extract_trajectory_cv.py  extract_trajectory_vlm.py  generate_scenarios.py  physics_ground_truth.py
